--- a/ejercitacion html y css/ejercicios.html
+++ b/ejercitacion html y css/ejercicios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <title>Ejercitacion</title>
 </head>
 <body>
     <p>Ejercicio uno</p>
@@ -59,31 +59,31 @@
     <p> Ejercicio seis</p>
     <main class="grilla">
         <div class="Color">
-            <h3 class="alineadoTexto">Abomasnow</h3>
+            <h3 class="texto">Abomasnow</h3>
             <img class="fotoDinamica" src="abomasnow-150x150.png" alt="fotoGrilla"/>
         </div>
 
         <div>
-            <h3 class="alineadoTexto"> Carnivine</h3>
+            <h3 class="texto"> Carnivine</h3>
             <img class="fotoDinamica" src="carnivine-150x150.png" alt="fotoGrilla"/>
         </div>
 
         <div>
-            <h3 class="alineadoTexto"> Shaymin</h3>
+            <h3 class="texto"> Shaymin</h3>
             <img class="fotoDinamica" src="shaymin-150x150.png" alt="fotoGrilla"/>
         </div>
         <div>
-            <h3 class="alineadoTexto">Snover</h3>
+            <h3 class="texto">Snover</h3>
             <img class="fotoDinamica" src="snover-150x150.png" alt="fotoGrilla"/>
         </div>
 
         <div>
-            <h3 class="alineadoTexto"> Tangrowth</h3>
+            <h3 class="texto"> Tangrowth</h3>
             <img class="fotoDinamica" src="tangrowth-150x150.png" alt="fotoGrilla"/>
         </div>
 
         <div>
-            <h3 class="alineadoTexto"> Leafeon</h3>
+            <h3 class="texto"> Leafeon</h3>
             <img class="fotoDinamica" src="leafeon-150x150.png" alt="fotoGrilla"/>
         </div>
         
